--- a/.github/workflows/eShopOnWeb.yml
+++ b/.github/workflows/eShopOnWeb.yml
@@ -25,60 +25,88 @@ jobs:
       - name: Clear NuGet cache
         run: dotnet nuget locals all --clear
 
-      - name: Install missing Ardalis packages
+      - name: Create fixed ApplicationCore project file
         run: |
-          # Add the missing Ardalis packages to ApplicationCore
-          cd src/ApplicationCore
-          
-          # Install Ardalis.Specification (provides Specification<> and repository interfaces)
-          dotnet add package Ardalis.Specification --version 6.1.0
-          
-          # Install Ardalis.GuardClauses (provides IGuardClause)
-          dotnet add package Ardalis.GuardClauses --version 4.5.0
-          
-          # Install Ardalis.Result
-          dotnet add package Ardalis.Result --version 9.1.0
-          
-          # Install System.Text.Json to resolve version conflicts
-          dotnet add package System.Text.Json --version 8.0.0
-          
-          cd ../..
+          # Create a fixed ApplicationCore.csproj with all required packages
+          cat > src/ApplicationCore/ApplicationCore.csproj << 'EOF'
+<Project Sdk="Microsoft.NET.Sdk">
 
-      - name: Update Web project dependencies
-        run: |
-          cd src/Web
-          
-          # Update Azure.Identity to resolve System.Text.Json conflict
-          dotnet add package Azure.Identity --version 1.10.4
-          
-          # Update other problematic packages
-          dotnet add package System.IdentityModel.Tokens.Jwt --version 7.0.0
-          dotnet add package Microsoft.EntityFrameworkCore.SqlServer --version 8.0.0
-          dotnet add package Microsoft.AspNetCore.Identity.EntityFrameworkCore --version 8.0.0
-          
-          cd ../..
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
 
-      - name: Restore projects
-        run: |
-          # Restore in dependency order
-          dotnet restore src/BlazorShared/BlazorShared.csproj
-          dotnet restore src/ApplicationCore/ApplicationCore.csproj
-          dotnet restore src/Infrastructure/Infrastructure.csproj
-          dotnet restore src/BlazorAdmin/BlazorAdmin.csproj
-          dotnet restore src/Web/Web.csproj
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" Version="6.1.0" />
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.5.0" />
+    <PackageReference Include="Ardalis.Result" Version="9.1.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.0" />
+    <PackageReference Include="System.Security.Claims" Version="4.3.0" />
+  </ItemGroup>
 
-      - name: Build projects
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorShared\BlazorShared.csproj" />
+  </ItemGroup>
+
+</Project>
+EOF
+
+      - name: Create fixed Web project file
         run: |
-          # Build in dependency order
-          dotnet build src/BlazorShared/BlazorShared.csproj --configuration Release --no-restore
-          dotnet build src/ApplicationCore/ApplicationCore.csproj --configuration Release --no-restore
-          dotnet build src/Infrastructure/Infrastructure.csproj --configuration Release --no-restore
-          dotnet build src/BlazorAdmin/BlazorAdmin.csproj --configuration Release --no-restore
-          dotnet build src/Web/Web.csproj --configuration Release --no-restore
+          # Create a fixed Web.csproj with compatible packages
+          cat > src/Web/Web.csproj << 'EOF'
+<Project Sdk="Microsoft.NET.Sdk.Web">
+
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>aspnet-Web-53bc9b9d-9d6a-45d4-8429-2a2761773502</UserSecretsId>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Ardalis.ListStartupServices" Version="1.1.3" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.1" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="7.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
+    <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="3.3.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApplicationCore\ApplicationCore.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\BlazorAdmin\BlazorAdmin.csproj" />
+  </ItemGroup>
+
+</Project>
+EOF
+
+      - name: Restore and build projects
+        run: |
+          # Restore dependencies
+          dotnet restore
+          
+          # Build the solution (skip tests to avoid dependency issues)
+          dotnet build --configuration Release --no-restore
 
       - name: Publish Web App
         run: |
-          dotnet publish src/Web/Web.csproj -c Release -o ./publish_output --no-build
+          dotnet publish src/Web/Web.csproj -c Release -o ./publish_output
           cd ./publish_output
           zip -r ../app.zip .
 
@@ -108,14 +136,6 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Deploy Infrastructure
-        uses: azure/arm-deploy@v2
-        with:
-          subscriptionId: ${{ env.SUBSCRIPTION_ID }}
-          resourceGroupName: ${{ env.RESOURCE_GROUP }}
-          template: ./artifacts/bicep/webapp.bicep
-          parameters: 'webAppName=${{ env.WEBAPP_NAME }} location=${{ env.LOCATION }}'
 
       - name: Deploy to Web App
         uses: azure/webapps-deploy@v2
