--- a/.github/workflows/eShopOnWeb.yml
+++ b/.github/workflows/eShopOnWeb.yml
@@ -1,7 +1,7 @@
 name: eShopOnWeb Build and Deploy
 
 on:
-  workflow_dispatch:
+  workflow_dispatch
 
 env:
   RESOURCE_GROUP: rg-eshoponweb-westeurope
