--- a/.github/workflows/eShopOnWeb.yml
+++ b/.github/workflows/eShopOnWeb.yml
@@ -1,7 +1,7 @@
 name: eShopOnWeb Build and Deploy
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
 
 env:
   RESOURCE_GROUP: rg-eshoponweb-westeurope
@@ -82,6 +82,27 @@ EOF
     <ProjectReference Include="..\ApplicationCore\ApplicationCore.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\BlazorAdmin\BlazorAdmin.csproj" />
+  </ItemGroup>
+</Project>
+EOF
+
+      - name: Create fixed Infrastructure project file
+        run: |
+          cat > src/Infrastructure/Infrastructure.csproj << 'EOF'
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ApplicationCore\ApplicationCore.csproj" />
   </ItemGroup>
 </Project>
 EOF
